--- a/nav-skel/package.json
+++ b/nav-skel/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-1": "^6.5.0",
     "browser-sync": "^2.13.0",
+    "chromedriver": "^2.24.1",
     "conventional-changelog": "1.1.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
