--- a/communityApp/package.json
+++ b/communityApp/package.json
@@ -6,10 +6,12 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Chris Podmore",
     "license": "ISC",
     "devDependencies": {
+        "browser-sync": "^2.16.0",
         "express": "^4.14.0",
+        "gulp": "^3.9.1",
         "jspm": "^0.16.45"
     },
     "jspm": {
