--- a/communityApp/package.json
+++ b/communityApp/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "communityapp",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "communityapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Chris Podmore",
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.16.0",
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "jspm": "^0.16.45"
+  },
+  "jspm": {
+    "dependencies": {
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.3",
+      "bootstrap": "github:twbs/bootstrap@^3.3.7",
+      "moment": "npm:moment@^2.15.1"
     },
-    "author": "Chris Podmore",
-    "license": "ISC",
     "devDependencies": {
-        "browser-sync": "^2.16.0",
-        "express": "^4.14.0",
-        "gulp": "^3.9.1",
-        "jspm": "^0.16.45"
-    },
-    "jspm": {
-        "dependencies": {
-            "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
-            "aurelia-framework": "npm:aurelia-framework@^1.0.3",
-            "bootstrap": "github:twbs/bootstrap@^3.3.7"
-        },
-        "devDependencies": {
-            "babel": "npm:babel-core@^5.8.24",
-            "babel-runtime": "npm:babel-runtime@^5.8.24",
-            "core-js": "npm:core-js@^1.1.4"
-        }
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
     }
+  }
 }
