--- a/communityApp/package.json
+++ b/communityApp/package.json
@@ -20,7 +20,8 @@
       "aurelia-framework": "npm:aurelia-framework@^1.0.3",
       "bootstrap": "github:twbs/bootstrap@^3.3.7",
       "font-awesome": "npm:font-awesome@^4.6.3",
-      "moment": "npm:moment@^2.15.1"
+      "moment": "npm:moment@^2.15.1",
+      "toastr": "github:CodeSeven/toastr@^2.1.3"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
